fix dark mode repl input color

--- a/resources/repl.css
+++ b/resources/repl.css
@@ -34,6 +34,7 @@ body {
     resize: none;
     padding: 0;
     display: block;
+    color: var(--vscode-editor-foreground);
 }
 .input:disabled { color: inherit; pointer-events: none; }
 
